@@ -15,6 +15,12 @@
     <property name="windowTitle" >
       <string>New Go4 Browser</string>
     </property>
+    <property name="minimumSize" >
+      <size>
+        <width>100</width>
+        <height>100</height>
+      </size>
+    </property>
     <layout class="QGridLayout" >
       <property name="margin" >
         <number>1</number>
