@@ -33,37 +33,40 @@
 #include "TGo4Condition.h"
 #include "TGo4WorkSpace.h"
 
-QString TGo4QSettings::fgSettFileName = "";
+const char* MainWindowDefaultState = "000000ff00000000fd00000002000000000000012500000198fc0200000001fb0000001600420072006f00770073006500720044006f0063006b0100000057000001980000007a00ffffff00000003000003d500000082fc0100000001fc00000000000003d50000007f00fffffffa000000000200000003fb00000016004c006f00670049006e0066006f0044006f0063006b0100000000ffffffff0000005300fffffffb0000001a004d006200730056006900650077006500720044006f0063006b0000000000ffffffff0000006500fffffffb0000001e0044004100420043004d006f006e00690074006f00720044006f0063006b0000000279000000ce0000000000000000000002aa0000019800000004000000040000000800000008fc0000000800000002000000040000001600460069006c00650054006f006f006c0042006100720100000000ffffffff0000000000000000000000160047006f00340054006f006f006c007300420061007201000000c8ffffffff00000000000000000000001e0041006e0061006c00790073006900730054006f006f006c004200610072010000020c0000025800000000000000000000001a0044006900760069006400650050006100640044006f0063006b0000000395000000e40000000000000000000000020000000000000002000000020000002400420072006f0077007300650072004f007000740069006f006e00730044006f0063006b01000000000000010200000000000000000000001e0044007200610077004f007000740069006f006e00730044006f0063006b01000001020000037e00000000000000000000000200000002000000240048006900730044007200610077004f007000740069006f006e00730044006f0063006b0000000000000001290000000000000000000000180047006f0034005300740079006c00650044006f0063006b0000000000000004b10000000000000000000000020000000100000020005300630061006c0065004f007000740069006f006e00730044006f0063006b0000000000000004b10000000000000000000000030000000000000003000000010000001e0043006f006d006d0061006e0064004c0069006e00650044006f0063006b0000000000000004b1000000000000000000000003000000010000001c00540072006500650056006900650077006500720044006f0063006b0000000000000004b10000000000000000";
 
-const char* MainWindowDefaultState = "000000ff00000000fd00000002000000000000012500000264fc0200000001fb0000001600420072006f00770073006500720044006f0063006b010000005b000002640000005600ffffff000000030000048000000082fc0100000001fc00000000000004800000007f00fffffffa000000000200000003fb00000016004c006f00670049006e0066006f0044006f0063006b0100000000ffffffff0000005400fffffffb0000001a004d006200730056006900650077006500720044006f0063006b0000000000ffffffff0000006600fffffffb0000001e0044004100420043004d006f006e00690074006f00720044006f0063006b0000000279000000ce000000b200ffffff000003550000026400000004000000040000000800000008fc000000080000000200000004000000160047006f00340054006f006f006c007300420061007201000000000000016600000000000000000000001600460069006c00650054006f006f006c0042006100720100000166000000f800000000000000000000001e0041006e0061006c00790073006900730054006f006f006c004200610072010000025e0000013e00000000000000000000001a0044006900760069006400650050006100640044006f0063006b010000039c000000e40000000000000000000000020000000000000002000000020000002400420072006f0077007300650072004f007000740069006f006e00730044006f0063006b01000000000000010200000000000000000000001e0044007200610077004f007000740069006f006e00730044006f0063006b01000001020000037e00000000000000000000000200000002000000240048006900730044007200610077004f007000740069006f006e00730044006f0063006b0000000000000001290000000000000000000000180047006f0034005300740079006c00650044006f0063006b0000000000000004b10000000000000000000000020000000100000020005300630061006c0065004f007000740069006f006e00730044006f0063006b0000000000000004b10000000000000000000000030000000000000003000000010000001e0043006f006d006d0061006e0064004c0069006e00650044006f0063006b0000000000000004b1000000000000000000000003000000010000001c00540072006500650056006900650077006500720044006f0063006b0000000000000004b10000000000000000";
+const char* MainWindowDefaultGeometry = "01d9d0cb00010000000000140000000c000003f0000002ba0000001800000029000003ec000002b6000000000000";
 
 TGo4QSettings* go4sett = 0;
 
-void TGo4QSettings::SetSettLocation(const QString& filename)
+TGo4QSettings::TGo4QSettings(const QString& filename)
 {
-   fgSettFileName = filename;
-}
+   fSettFileName = filename;
 
-QString TGo4QSettings::GetSettLoaction()
-{
-   if (fgSettFileName.length() > 0) return fgSettFileName;
-   return QDir::homePath() + "/.config/GSI/go4.conf";
-}
-
-TGo4QSettings::TGo4QSettings()
-{
    Open();
 }
 
 TGo4QSettings::~TGo4QSettings()
 {
-   delete sett;
+   // do not destroy QSettings - they will be automatically saved
+   // delete sett;
 }
+
+QString TGo4QSettings::GetSettLoaction()
+{
+   if (fSettFileName.length() > 0) return fSettFileName;
+#ifdef WIN32
+   return QString("Registry (default)");
+#endif
+
+   return QDir::homePath() + "/.config/GSI/go4.conf (default)";
+}
+
 
 void TGo4QSettings::Open()
 {
-   if (fgSettFileName.length()>0)
-      sett = new QSettings(fgSettFileName, QSettings::NativeFormat);
+   if (fSettFileName.length()>0)
+      sett = new QSettings(fSettFileName, QSettings::NativeFormat);
    else
       sett = new QSettings("GSI","go4");
 }
@@ -526,36 +529,21 @@ QString TGo4QSettings::getTGraphDrawOpt()
    return getStr("/ViewPanel/TGraphDrawOpt", "ap");
 }
 
-
-void TGo4QSettings::RestoreSettings(QMainWindow* tgt)
+void TGo4QSettings::restoreMainWindowState(QMainWindow* tgt)
 {
    tgt->restoreState(sett->value("/MainWindow/State", QByteArray::fromHex(MainWindowDefaultState)).toByteArray());
+
+   tgt->restoreGeometry(sett->value("/MainWindow/Geometry", QByteArray::fromHex(MainWindowDefaultGeometry)).toByteArray());
 }
 
-void TGo4QSettings::StoreSettings(QMainWindow* src)
+void TGo4QSettings::storeMainWindowState(QMainWindow* src)
 {
-   // cout << "res: " << src->saveState().toHex().constData() << endl;
+//   cout << "State: " << src->saveState().toHex().data() << endl;
+//   cout << "Geom: " << src->saveGeometry().toHex().data() << endl;
 
-   sett->setValue( "/MainWindow/State", src->saveState());
-}
+   sett->setValue("/MainWindow/State", src->saveState());
 
-void TGo4QSettings::storeGeometry(QMainWindow* w)
-{
-   setInt( "/geometry/MainWinWidth", w->width() );
-   setInt( "/geometry/MainWinHeight", w->height() );
-   setInt( "/geometry/MainWinX", w->x() );
-   setInt( "/geometry/MainWinY", w->y() );
-}
-
-void TGo4QSettings::restoreGeometry(QMainWindow* w)
-{
-   int Width, Height, PosX, PosY;
-   Width  = getInt( "/geometry/MainWinWidth", 997 );
-   Height = getInt( "/geometry/MainWinHeight", 690 );
-   PosX   = getInt( "/geometry/MainWinX", 129 );
-   PosY   = getInt( "/geometry/MainWinY", 132 );
-   w->resize( Width, Height );
-   w->move( PosX, PosY );
+   sett->setValue("/MainWindow/Geometry", src->saveGeometry());
 }
 
 void TGo4QSettings::storePanelSize(QWidget* w)
