@@ -1,68 +1,0 @@
-[General]
-Font="Arial,10,-1,5,50,0,0,0,0,0"
-
-[geometry]
-MainWinWidth=800
-MainWinHeight=600
-MainWinX=0
-MainWinY=0
-
-[markers]
-Markerlabel=true
-Connectorline=true
-ShowX=true
-ShowY=false
-ShowXbin=false
-ShowYbin=false
-ShowBinContent=true
-
-[conditions]
-Conditionlabel=true
-ShowLimits=true
-ShowIntegral=true
-ShowXmean=true
-ShowYmean=false
-ShowXrms=true
-ShowYrms=false
-ShowXmax=true
-ShowYmax=false
-ShowCmax=true
-
-[Style]
-AppStyle=CDE
-
-[MainWindow]
-State="@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x2\0\0\0\0\0\0\x1%\0\0\x2W\xfc\x2\0\0\0\x1\xfb\0\0\0\x16\0\x42\0r\0o\0w\0s\0\x65\0r\0\x44\0o\0\x63\0k\x1\0\0\0\x62\0\0\x2W\0\0\0t\0\xff\xff\xff\0\0\0\x3\0\0\x4\x80\0\0\0\x8c\xfc\x1\0\0\0\x1\xfc\0\0\0\0\0\0\x4\x80\0\0\0\x7f\0\xff\xff\xff\xfa\0\0\0\0\x2\0\0\0\x3\xfb\0\0\0\x16\0L\0o\0g\0I\0n\0\x66\0o\0\x44\0o\0\x63\0k\x1\0\0\0\0\xff\xff\xff\xff\0\0\0r\0\xff\xff\xff\xfb\0\0\0\x1a\0M\0\x62\0s\0V\0i\0\x65\0w\0\x65\0r\0\x44\0o\0\x63\0k\0\0\0\0\0\xff\xff\xff\xff\0\0\0\x63\0\xff\xff\xff\xfb\0\0\0\x1e\0\x44\0\x41\0\x42\0\x43\0M\0o\0n\0i\0t\0o\0r\0\x44\0o\0\x63\0k\0\0\0\x2y\0\0\0\xce\0\0\0\0\0\0\0\0\0\0\x3U\0\0\x2W\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\b\0\0\0\x2\0\0\0\x3\0\0\0\x16\0\x46\0i\0l\0\x65\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x16\0G\0o\0\x34\0T\0o\0o\0l\0s\0\x42\0\x61\0r\x1\0\0\0\xe0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x1e\0\x41\0n\0\x61\0l\0y\0s\0i\0s\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\x2L\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x2\0\0\0\0\0\0\0\x2\0\0\0\x4\0\0\0$\0\x42\0r\0o\0w\0s\0\x65\0r\0O\0p\0t\0i\0o\0n\0s\0\x44\0o\0\x63\0k\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x1e\0\x44\0r\0\x61\0w\0O\0p\0t\0i\0o\0n\0s\0\x44\0o\0\x63\0k\0\0\0\x1\x3\0\0\x4\x93\0\0\0\0\0\0\0\0\0\0\0$\0H\0i\0s\0\x44\0r\0\x61\0w\0O\0p\0t\0i\0o\0n\0s\0\x44\0o\0\x63\0k\x1\0\0\0\xf9\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x1a\0\x44\0i\0v\0i\0\x64\0\x65\0P\0\x61\0\x64\0\x44\0o\0\x63\0k\x1\0\0\x2,\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\x2\0\0\0\x1\0\0\0\x18\0G\0o\0\x34\0S\0t\0y\0l\0\x65\0\x44\0o\0\x63\0k\0\0\0\0\0\0\0\x4\xf7\0\0\0\0\0\0\0\0\0\0\0\x2\0\0\0\x1\0\0\0 \0S\0\x63\0\x61\0l\0\x65\0O\0p\0t\0i\0o\0n\0s\0\x44\0o\0\x63\0k\0\0\0\0\0\0\0\x4]\0\0\0\0\0\0\0\0\0\0\0\x3\0\0\0\0\0\0\0\x3\0\0\0\x1\0\0\0\x1e\0\x43\0o\0m\0m\0\x61\0n\0\x64\0L\0i\0n\0\x65\0\x44\0o\0\x63\0k\0\0\0\0\0\0\0\x5\xd3\0\0\0\0\0\0\0\0\0\0\0\x3\0\0\0\x1\0\0\0\x1c\0T\0r\0\x65\0\x65\0V\0i\0\x65\0w\0\x65\0r\0\x44\0o\0\x63\0k\0\0\0\0\0\0\0\x4\xab\0\0\0\0\0\0\0\0)"
-
-[MbsMonitor]
-ShowMore=true
-
-[Browser]
-Name=208
-Flags=-1
-Info=-1
-Date=-1
-Time=60
-Class=-1
-Size=-1
-
-[ViewPanel]
-Width=650
-Height=450
-
-[ClientSetting]
-Name=MyAnalysis
-Node=localhost
-Dir=
-Exec=./MainUserAnalysis
-Lib=libGo4UserAnalysis
-Shell=exec
-Term=qt
-IsServer=false
-ExeMode=1
-
-[DabcMonitor]
-Node=dimDns.gsi.de
-Bins=200
-Frequency=5
-BackwardsTrending=true
